# natter-rust-axum

./: .gitignore  Cargo.toml  README.md
migrations/: 1_setup.down.sql  1_setup.sql  1_setup.up.sql
src/: api.rs  error.rs  errors.rs  main.rs  middlewares.rs
src/routes/: mod.rs  moderator.rs  space.rs  user.rs
